--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^5.3.0",
+    "json-server": "^0.16.1",
+    "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuidv4": "^6.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "run:server": "json-server --watch src/db.json --port 3333",
+    "run:app": "concurrently \"yarn run:server\" \"yarn start\" "
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/styled-components": "^5.1.3"
   }
 }
